# BeerATM

./: .gitignore  CMakeLists.txt  README.md
include/dispenser/: dispenser.hh  flowmeter.hh  tank.hh  valve.hh
projects/P01/inc/: ev_manager.hh  ev_manager.inl  map.hh
projects/P01/src/: event_manager.cc
projects/P01/test/: ev_manager_test.cc
projects/P02/test/: test_compressor.cc
src/dispenser/: flowmeter.cc
test/dispenser/: dispenser_test.cc  valve_stub.hh
